--- a/index.html
+++ b/index.html
@@ -4,86 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> login page</title>
-    <style>
-        *{
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        body {
-         font-family: Arial, sans-serif;
-         background-color: #9093af70;
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         height: 100vh;
-        }
-        .container{
-            width: 400px;
-            height: 400px;
-            background-color: #efe8e8;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0,0, 0.1);
-        }
-        .login-box{
-            padding: 40px;
-        }
-        h1{
-            text-align: center;
-            margin-bottom: 35px;
-            color: #333;
-        }
-        form{
-            display: flex;
-            flex-direction: column;
-        }
-        .user-box{
-            position: relative;
-            margin-bottom: 30px;
-        }
-        .user-box input{
-            width: 100%;
-            padding: 10px 0;
-            font-size: 16px;
-            color: #333;
-            border: none;
-            border-bottom: 1px solid #333;
-            background: transparent;
-            transition: border-color 0.2s;
-        }
-        .user-box input:focus,
-        .user-box input:valid{
-            border-color: #1e87f0;
-        }
-        .user-box label{
-            position: absolute;
-            top: 0;
-            left: 0;
-            font-size: 16px;
-            color: #777;
-            pointer-events: all 0.2s;
-        }
-        .user-box input:focus~label,
-        .user-box input:valid~label{
-            top: -20px;
-            font-size: 12px;
-            color: #1e87f0;
-        }
-        a{
-            display: inline-block;
-    background-color: #1e87f0;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 16px;
-    text-align: center;
-    transition: background-color 0.2s;
-        }
-        a:hover{
-            background: color #1472c4;;
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
